# mipt_hw_tp_project

./: .gitignore  CMakeLists.txt  README.md  UML.drawio  install.sh  main.cpp  run.sh
doc/: UML_old.drawio
libs/: CMakeLists.txt
src/: CMakeLists.txt  bullet.cpp  bullet.h  bulletBasicTimer.cpp  bulletBasicTimer.h  bulletMine.cpp  bulletMine.h  classData.cpp  classData.h  constants.cpp  constants.h  contactListener.cpp  contactListener.h  game.cpp  game.h  tank.cpp  tank.h  wall.cpp  wall.h  weapon.cpp  weapon.h  weaponBullet.cpp  weaponBullet.h  weaponMine.cpp  weaponMine.h
src/bonus/: bonus.cpp  bonus.h  bonusBuckshot.cpp  bonusBuckshot.h  bonusMine.cpp  bonusMine.h
src/bullet/: bullet.cpp  bullet.h  bulletBasicTimer.cpp  bulletBasicTimer.h  bulletMine.cpp  bulletMine.h
src/graphics/: basic_sfml_graphics.cpp  basic_sfml_graphics.h  event_manager.h  graphics.h  sfml_event_manager.cpp  sfml_event_manager.h
src/weapon/: weapon.cpp  weapon.h  weaponBuckshot.cpp  weaponBuckshot.h  weaponBullet.cpp  weaponBullet.h  weaponMine.cpp  weaponMine.h
